cards-frontend/src/app/shared/components/confirm-dialog/confirm-dialog.component.scss
@import '../../styles/colors.scss';

.absolute-container {
  width: 100%;
  height: 100%;
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  backdrop-filter: blur(3px);
  background: $backdrop;
}

.dialog-container {
  display: flex;
  align-items: center;
  text-align: center;
  width: calc(100% - 40px);
  justify-content: center;
  flex-direction: column;
  background: $medium-grey;
  padding: 20px;
  border-radius: 10px;
}

.content {
  margin-bottom: 20px;
  color: $white;
}

.button-container {
  display: flex;
  width: 100%;

  .button:first-child {
    padding-right: 10px;
  }

  .button:not(:first-child) {
    padding-left: 10px;
  }
}

.button {
  width: 50%;
}

